--- a/templates/error.html
+++ b/templates/error.html
@@ -7,6 +7,9 @@ $def with (form)
         <title> Inicio de Sesión</title>
     </head>
     <body>
+        <center>
+        <h1> Inicio De Sesión </h1>
+        </center>
 <center>
       <div id="div1">
 <form name="main" method="post"> 
